<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Sesame</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="wins">Wins</string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_friends">Contacts</string>
    <string name="title_registered">Registered</string>
    <string name="title_me">Me</string>
    <string name="title_list">Sesame</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home!!</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="logout">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sesame">Sesame</string>
    <string name="qrhint">Scan this QR code to add me on your contact</string>
    <string name="change_sesame_name">Change Sesame Name</string>
    <string name="change_sesame_angle">Configure Angles</string>
    <string name="ssm_update">SesameOS Update</string>
    <string name="autolock">Auto Lock</string>
    <string name="ssm_delete">Delete this Sesame</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="delete_friend">Delete the Contact</string>
    <string name="manual_operated">Movement in Thumbturn</string>
    <string name="login">Log In</string>
    <string name="forget_password">Forgot password</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification code</string>
    <string name="new_password">New Password</string>
    <string name="re_send_verification_code">Re-send verification code</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="set_lock_position">Set Lock Position</string>
    <string name="set_unlock_position">Set Unlock Position</string>
    <string name="second">sec</string>
    <string name="delete_member">Delete Member</string>
    <string name="add_member">Add Member</string>
    <string name="edit_name">Edit Name</string>
    <string name="manua_lock">Manually Locked</string>
    <string name="manua_unlock">Manually Unlocked</string>
    <string name="member">Member</string>
    <string name="please_configure">Please configure Locked/Unlocked Angle.</string>
    <string name="please_complete">Please completely lock/unlock Sesame, and press the buttons below to configure locked/unlocked positions respectively.</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="new_sesame">New Sesame</string>
    <string name="scan_the_qr_code">Scan the QR code</string>
    <string name="Sesame2">Sesame2</string>
    <string name="give_cool_name">Give Sesame a cooool name! 😎</string>
    <string name="no_new_devices">No New Devices</string>

<!--    <string name="sesame_os_update">SesameOS Update</string>-->
<!--    <string name="start_soon">Starting soon…</string>-->
<!--    <string name="close">Close</string>-->
<!--    <string name="initializing">Initializing…</string>-->
<!--    <string name="start">Start</string>-->
<!--    <string name="succeeded">Succeeded</string>-->
    <string name = "onDeviceDisconnected">onDeviceDisconnected</string>
    <string name = "onProgressChanged">onProgressChanged</string> 　
    <string name = "onDeviceDisconnecting">onDeviceDisconnecting</string>
    <string name = "onDeviceConnected">onDeviceConnected</string> 　
    <string name = "onDfuProcessStarting">onDfuProcessStarting</string>
    <string name = "onDfuAborted">onDfuAborted</string>
    <string name = "onEnablingDfuMode">onEnablingDfuMode</string> 　
    <string name = "onDfuCompleted">onDfuCompleted</string> 　
    <string name = "onFirmwareValidating">onFirmwareValidating</string> 　
    <string name = "onDfuProcessStarted">onDfuProcessStarted</string> 　
    <string name = "onDeviceConnecting">onDeviceConnecting</string>
    <string name="onError">onError</string>

</resources>
